fix category item width, reservations section gap, event card text align

--- a/src/components/atoms/CategoryItem/category-item.scss
+++ b/src/components/atoms/CategoryItem/category-item.scss
@@ -9,7 +9,6 @@
     height: 94px;
     justify-content: space-between;
     min-width: 280px;
-    width: 416px;
 
     &__header-container {
         display: flex;
@@ -51,13 +50,6 @@
         display: flex;
 
         @media (max-width: 400px) {
-            img {
-                height: 118px;
-                width: 128px;
-            }
-        }
-
-        @media (max-width: 350px) {
             img {
                 height: 100px;
                 width: 105px;
