--- a/src/components/molecules/EventCard/event-card.scss
+++ b/src/components/molecules/EventCard/event-card.scss
@@ -24,6 +24,7 @@ $_color-lynch: #627485;
         font-size: $font-size-tiny;
         font-weight: $font-weight-medium;
         position: absolute;
+        text-align: center;
         top: 65.5px;
 
         &-name {
